index.css
body {
	background-color: #010b3d;
	color: white;
	display: grid;
	grid-template-columns: 10% 1fr 
}

/* sidebar */
.sidebar {
	padding: 0.25rem;
}

.sidebar a {
	text-decoration: none;
	color: grey;
}

.sidebar-item {
	padding-bottom: .75rem;
}

.active {
	color: #9ae3b5 !important;
}


/* home page */
.home-main {
	margin: 1rem;
	font-size: 1.5rem;
}

.home-main a {
	text-decoration: none;
}

/* writing page */
.writing-main {
	margin-top: 3rem;
}

.writing-divider hr {
	border: 0 none;
	height: 1px;
	background-color: grey;
}

.writing-main a {
	text-decoration: none;
	color: white;
	font-weight: bold;
}

.writing-list-item {
	width: 60%;
	display: grid;
	grid-template-columns: 75% 25%;
}

.writing-list-item-date {
	color: grey;
}

.writing-divider {
	width: 60%;
}


/* skills page */
.skills-main li {
	margin-bottom: 1rem;
}

.skills-sub-content {
	padding-left: 2rem;
}

/* projects page */
.projects-main li {
	margin-bottom: 1rem;
}

.projects-sub-content {
	padding-left: 2rem;
}

/* read_list page */
.read-list-main li {
	margin-bottom: 1rem;
}

